--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   image_picker: ^0.7.4
   fluttertoast: ^8.0.6
   multiselect_formfield: ^0.1.6
+  #este es otro multiselect
+  flutter_multiselect: ^0.5.1
+
 
 dev_dependencies:
   flutter_test:
